--- a/Testing note/test.ipynb
+++ b/Testing note/test.ipynb
@@ -31,8 +31,27 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'precision_recall_curve' from 'sklearn' (/home/zuy/.pyenv/versions/3.11.12/envs/flower-3.11.12/lib/python3.11/site-packages/sklearn/__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m precision_recall_curve\n\u001b[32m      3\u001b[39m y_true = [\u001b[32m0\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m2\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m2\u001b[39m]\n\u001b[32m      4\u001b[39m y_pred = [\u001b[32m0\u001b[39m, \u001b[32m2\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m1\u001b[39m]\n",
+      "\u001b[31mImportError\u001b[39m: cannot import name 'precision_recall_curve' from 'sklearn' (/home/zuy/.pyenv/versions/3.11.12/envs/flower-3.11.12/lib/python3.11/site-packages/sklearn/__init__.py)"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.metrics import precision_recall_curve\n",
+    "y_true = [0, 1, 2, 0, 1, 2]\n",
+    "y_pred = [0, 2, 1, 0, 0, 1]\n",
+    "precision, recall, thresholds = precision_recall_curve(y_true, y_pred)\n",
+    "precision\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -1070,7 +1089,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "flower_tutorial",
+   "display_name": "flower-3.11.12",
    "language": "python",
    "name": "python3"
   },
@@ -1084,7 +1103,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.12"
   }
  },
  "nbformat": 4,
