--- a/Testing note/CreditCard_df_3 copy.ipynb
+++ b/Testing note/CreditCard_df_3 copy.ipynb
@@ -78,8 +78,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "skearn \n",
+    "minmaxscale ()"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
