--- a/Testing note/Mutlihead_Attention.ipynb
+++ b/Testing note/Mutlihead_Attention.ipynb
@@ -1024,7 +1024,42 @@
         "id": "84AaNS24xuUV"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import math\n",
+        "\n",
+        "def scaled_dot_product(q, k, v, mask=None):\n",
+        "    d_k = q.size()[-1]\n",
+        "    scaled = torch.matmul(q, k.transpose(-1, -2)) / math.sqrt(d_k)\n",
+        "    if mask is not None:\n",
+        "        scaled += mask\n",
+        "    attention = F.softmax(scaled, dim=-1)\n",
+        "    values = torch.matmul(attention, v)\n",
+        "    return values, attention\n",
+        "\n",
+        "class MultiheadAttention(nn.Module):\n",
+        "\n",
+        "    def __init__(self, input_dim, d_model, num_heads):\n",
+        "        super().__init__()\n",
+        "        self.input_dim = input_dim\n",
+        "        self.d_model = d_model\n",
+        "        self.num_heads = num_heads\n",
+        "        self.head_dim = d_model // num_heads\n",
+        "        self.qkv_layer = nn.Linear(input_dim , 3 * d_model)\n",
+        "        self.linear_layer = nn.Linear(d_model, d_model)\n",
+        "    \n",
+        "    def forward(self, x, mask=None):\n",
+        "        batch_size, sequence_length, input_dim = x.size()\n",
+        "        qkv = self.qkv_layer(x)\n",
+        "        qkv = qkv.reshape(batch_size, sequence_length, self.num_heads, 3 * self.head_dim)\n",
+        "        qkv = qkv.permute(0, 2, 1, 3)\n",
+        "        q, k, v = qkv.chunk(3, dim=-1)\n",
+        "        values, attention = scaled_dot_product(q, k, v, mask)\n",
+        "        values = values.reshape(batch_size, sequence_length, self.num_heads * self.head_dim)\n",
+        "        out = self.linear_layer(values)\n",
+        "        return out\n"
+      ]
     }
   ],
   "metadata": {
