Run-able muti-head

--- a/Testing note/Mutlihead_Attention.ipynb
+++ b/Testing note/Mutlihead_Attention.ipynb
@@ -1060,6 +1060,65 @@
         "        out = self.linear_layer(values)\n",
         "        return out\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "class MultiheadSelfAttention(nn.Module):\n",
+        "    def __init__(self, embed_dim, num_heads):   #self, 128, 3)\n",
+        "        super(MultiheadSelfAttention, self).__init__()\n",
+        "        assert embed_dim % num_heads == 0   # check if embed_dim % by num_heads == 0\n",
+        "\n",
+        "        self.embed_dim = embed_dim\n",
+        "        self.num_heads = num_heads\n",
+        "        self.head_dim = embed_dim // num_heads\n",
+        "\n",
+        "        # Define linear layers for query, key, value (Q,K,V)\n",
+        "        self.q_linear = nn.Linear(embed_dim, embed_dim)\n",
+        "        self.k_linear = nn.Linear(embed_dim, embed_dim)\n",
+        "        self.v_linear = nn.Linear(embed_dim, embed_dim)\n",
+        "\n",
+        "        # Output projection\n",
+        "        self.fc = nn.Linear(embed_dim, embed_dim)\n",
+        "\n",
+        "    def forward(self, x):   # x = ( batch_size, seq_len, embed_dim )\n",
+        "        print(\"shape: \",x.shape)\n",
+        "        batch_size, seq_len, embed_dim = x.size()\n",
+        "        # Linear projections\n",
+        "        Q = self.q_linear(x)    # ( batch, seq_len, embed_dim )\n",
+        "        K = self.k_linear(x)    # ( batch, seq_len, embed_dim )\n",
+        "        V = self.v_linear(x)    # ( batch, seq_len, embed_dim )\n",
+        "        # Split into heads\n",
+        "        # [ After reshape: (batch_size, seq_len, num_heads, head_dim) ] \n",
+        "        # [ After transpose: (batch_size, num_heads, seq_len, head_dim) ]\n",
+        "        Q = Q.view(batch_size, seq_len, self.num_heads, self.head_dim).transpose(1, 2)  #(B, H, S, D)\n",
+        "        K = K.view(batch_size, seq_len, self.num_heads, self.head_dim).transpose(1, 2)\n",
+        "        V = V.view(batch_size, seq_len, self.num_heads, self.head_dim).transpose(1, 2)\n",
+        "\n",
+        "        # Scaled dot-product attention\n",
+        "        scores = torch.matmul(Q, K.transpose(-2, -1)) / (self.head_dim ** 0.5)  # (B, H, S, S)\n",
+        "        attn = F.softmax(scores, dim=-1)  # (B, H, S, S)\n",
+        "        context = torch.matmul(attn, V)   # (B, H, S, D)\n",
+        "\n",
+        "        # Merge all attention heads back into a single tensor.\n",
+        "        context = context.transpose(1, 2).contiguous().view(batch_size, seq_len, embed_dim)  # (B, S, E)\n",
+        "\n",
+        "        # Final linear layer\n",
+        "        out = self.fc(context)  # ( batch, seq_len, embed_dim )\n",
+        "        return out\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "out = torch.sigmoid(out)  # Binary classification, output probability for class 1"
+      ]
     }
   ],
   "metadata": {
