--- a/Testing note/CreditCard_df_3 copy.ipynb
+++ b/Testing note/CreditCard_df_3 copy.ipynb
@@ -6,6 +6,48 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No GPU available. Training will run on CPU.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "if torch.cuda.is_available():\n",
+    "    print(f\"GPU: {torch.cuda.get_device_name(0)} is available.\")\n",
+    "else:\n",
+    "    print(\"No GPU available. Training will run on CPU.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "torch.cuda.is_available()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -566,7 +608,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "flower_tutorial",
+   "display_name": "flower-3.11.12",
    "language": "python",
    "name": "python3"
   },
@@ -580,7 +622,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.12"
   }
  },
  "nbformat": 4,
