--- a/Testing note/test copy.ipynb
+++ b/Testing note/test copy.ipynb
@@ -169,6 +169,288 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "import math\n",
+    "import pandas as pd\n",
+    "from sklearn.preprocessing import MinMaxScaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('/home/zuy/Documents/BCU/ML/CSV/df_train_3.csv')\n",
+    "df.drop(\"Unnamed: 0\", axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Time</th>\n",
+       "      <th>V1</th>\n",
+       "      <th>V2</th>\n",
+       "      <th>V3</th>\n",
+       "      <th>V4</th>\n",
+       "      <th>V5</th>\n",
+       "      <th>V6</th>\n",
+       "      <th>V7</th>\n",
+       "      <th>V8</th>\n",
+       "      <th>V9</th>\n",
+       "      <th>V10</th>\n",
+       "      <th>V11</th>\n",
+       "      <th>V12</th>\n",
+       "      <th>V13</th>\n",
+       "      <th>V14</th>\n",
+       "      <th>Amount</th>\n",
+       "      <th>Class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.905774</td>\n",
+       "      <td>0.862468</td>\n",
+       "      <td>-0.582668</td>\n",
+       "      <td>-0.800214</td>\n",
+       "      <td>-0.402839</td>\n",
+       "      <td>1.195050</td>\n",
+       "      <td>3.686711</td>\n",
+       "      <td>-1.352372</td>\n",
+       "      <td>2.084633</td>\n",
+       "      <td>1.176746</td>\n",
+       "      <td>-0.064710</td>\n",
+       "      <td>-0.054899</td>\n",
+       "      <td>0.360069</td>\n",
+       "      <td>0.057693</td>\n",
+       "      <td>-0.126514</td>\n",
+       "      <td>-0.204315</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.465984</td>\n",
+       "      <td>0.902013</td>\n",
+       "      <td>-0.081009</td>\n",
+       "      <td>-1.688308</td>\n",
+       "      <td>0.169440</td>\n",
+       "      <td>2.300397</td>\n",
+       "      <td>3.063923</td>\n",
+       "      <td>-0.037911</td>\n",
+       "      <td>1.216367</td>\n",
+       "      <td>0.077896</td>\n",
+       "      <td>0.381968</td>\n",
+       "      <td>-0.149059</td>\n",
+       "      <td>0.179281</td>\n",
+       "      <td>-0.298349</td>\n",
+       "      <td>0.731565</td>\n",
+       "      <td>-0.264579</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Time        V1        V2        V3        V4        V5        V6  \\\n",
+       "0  0.905774  0.862468 -0.582668 -0.800214 -0.402839  1.195050  3.686711   \n",
+       "1  0.465984  0.902013 -0.081009 -1.688308  0.169440  2.300397  3.063923   \n",
+       "\n",
+       "         V7        V8        V9       V10       V11       V12       V13  \\\n",
+       "0 -1.352372  2.084633  1.176746 -0.064710 -0.054899  0.360069  0.057693   \n",
+       "1 -0.037911  1.216367  0.077896  0.381968 -0.149059  0.179281 -0.298349   \n",
+       "\n",
+       "        V14    Amount  Class  \n",
+       "0 -0.126514 -0.204315    0.0  \n",
+       "1  0.731565 -0.264579    0.0  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_new = MinMaxScaler().fit_transform(df)\n",
+    "df_new = pd.DataFrame(df_new, columns=[\n",
+    "'Time','V1','V2','V3','V4','V5','V6','V7','V8','V9','V10','V11','V12','V13','V14','Amount','Class'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Time</th>\n",
+       "      <th>V1</th>\n",
+       "      <th>V2</th>\n",
+       "      <th>V3</th>\n",
+       "      <th>V4</th>\n",
+       "      <th>V5</th>\n",
+       "      <th>V6</th>\n",
+       "      <th>V7</th>\n",
+       "      <th>V8</th>\n",
+       "      <th>V9</th>\n",
+       "      <th>V10</th>\n",
+       "      <th>V11</th>\n",
+       "      <th>V12</th>\n",
+       "      <th>V13</th>\n",
+       "      <th>V14</th>\n",
+       "      <th>Amount</th>\n",
+       "      <th>Class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.937075</td>\n",
+       "      <td>0.991418</td>\n",
+       "      <td>0.759318</td>\n",
+       "      <td>0.813931</td>\n",
+       "      <td>0.222601</td>\n",
+       "      <td>0.775833</td>\n",
+       "      <td>0.303487</td>\n",
+       "      <td>0.256341</td>\n",
+       "      <td>0.797613</td>\n",
+       "      <td>0.511242</td>\n",
+       "      <td>0.505465</td>\n",
+       "      <td>0.278523</td>\n",
+       "      <td>0.723425</td>\n",
+       "      <td>0.453073</td>\n",
+       "      <td>0.643815</td>\n",
+       "      <td>0.000285</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.720386</td>\n",
+       "      <td>0.992920</td>\n",
+       "      <td>0.766743</td>\n",
+       "      <td>0.784411</td>\n",
+       "      <td>0.262921</td>\n",
+       "      <td>0.785532</td>\n",
+       "      <td>0.296185</td>\n",
+       "      <td>0.265342</td>\n",
+       "      <td>0.792624</td>\n",
+       "      <td>0.464359</td>\n",
+       "      <td>0.514616</td>\n",
+       "      <td>0.270128</td>\n",
+       "      <td>0.716463</td>\n",
+       "      <td>0.416956</td>\n",
+       "      <td>0.670298</td>\n",
+       "      <td>0.000116</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Time        V1        V2        V3        V4        V5        V6  \\\n",
+       "0  0.937075  0.991418  0.759318  0.813931  0.222601  0.775833  0.303487   \n",
+       "1  0.720386  0.992920  0.766743  0.784411  0.262921  0.785532  0.296185   \n",
+       "\n",
+       "         V7        V8        V9       V10       V11       V12       V13  \\\n",
+       "0  0.256341  0.797613  0.511242  0.505465  0.278523  0.723425  0.453073   \n",
+       "1  0.265342  0.792624  0.464359  0.514616  0.270128  0.716463  0.416956   \n",
+       "\n",
+       "        V14    Amount  Class  \n",
+       "0  0.643815  0.000285    0.0  \n",
+       "1  0.670298  0.000116    0.0  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_new.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 1.])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_new['Class'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -177,7 +459,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "flower_tutorial",
+   "display_name": "flower-3.11.12",
    "language": "python",
    "name": "python3"
   },
@@ -191,7 +473,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.12"
   }
  },
  "nbformat": 4,
