--- a/Testing note/test copy.ipynb
+++ b/Testing note/test copy.ipynb
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
        "1  0.731565 -0.264579    0.0  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,18 +307,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_new = MinMaxScaler().fit_transform(df)\n",
+    "df_new = MinMaxScaler(feature_range=(0, 1)).fit_transform(df)\n",
     "df_new = pd.DataFrame(df_new, columns=[\n",
     "'Time','V1','V2','V3','V4','V5','V6','V7','V8','V9','V10','V11','V12','V13','V14','Amount','Class'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
        "1  0.670298  0.000116    0.0  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
        "array([0., 1.])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,10 +451,384 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Time</th>\n",
+       "      <th>V1</th>\n",
+       "      <th>V2</th>\n",
+       "      <th>V3</th>\n",
+       "      <th>V4</th>\n",
+       "      <th>V5</th>\n",
+       "      <th>V6</th>\n",
+       "      <th>V7</th>\n",
+       "      <th>V8</th>\n",
+       "      <th>V9</th>\n",
+       "      <th>V10</th>\n",
+       "      <th>V11</th>\n",
+       "      <th>V12</th>\n",
+       "      <th>V13</th>\n",
+       "      <th>V14</th>\n",
+       "      <th>Amount</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>18741.492662</td>\n",
+       "      <td>19828.356443</td>\n",
+       "      <td>15186.362165</td>\n",
+       "      <td>16278.623253</td>\n",
+       "      <td>4452.014003</td>\n",
+       "      <td>15516.664968</td>\n",
+       "      <td>6069.734946</td>\n",
+       "      <td>5126.825088</td>\n",
+       "      <td>15952.256295</td>\n",
+       "      <td>10224.846798</td>\n",
+       "      <td>10109.307540</td>\n",
+       "      <td>5570.452646</td>\n",
+       "      <td>14468.502119</td>\n",
+       "      <td>9061.453421</td>\n",
+       "      <td>12876.306388</td>\n",
+       "      <td>5.698458</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>14407.727210</td>\n",
+       "      <td>19858.394983</td>\n",
+       "      <td>15334.852160</td>\n",
+       "      <td>15688.216530</td>\n",
+       "      <td>5258.427845</td>\n",
+       "      <td>15710.635174</td>\n",
+       "      <td>5923.702380</td>\n",
+       "      <td>5306.843169</td>\n",
+       "      <td>15852.475389</td>\n",
+       "      <td>9287.170578</td>\n",
+       "      <td>10292.314406</td>\n",
+       "      <td>5402.552065</td>\n",
+       "      <td>14329.261237</td>\n",
+       "      <td>8339.117567</td>\n",
+       "      <td>13405.959811</td>\n",
+       "      <td>2.327649</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Time            V1            V2            V3           V4  \\\n",
+       "0  18741.492662  19828.356443  15186.362165  16278.623253  4452.014003   \n",
+       "1  14407.727210  19858.394983  15334.852160  15688.216530  5258.427845   \n",
+       "\n",
+       "             V5           V6           V7            V8            V9  \\\n",
+       "0  15516.664968  6069.734946  5126.825088  15952.256295  10224.846798   \n",
+       "1  15710.635174  5923.702380  5306.843169  15852.475389   9287.170578   \n",
+       "\n",
+       "            V10          V11           V12          V13           V14  \\\n",
+       "0  10109.307540  5570.452646  14468.502119  9061.453421  12876.306388   \n",
+       "1  10292.314406  5402.552065  14329.261237  8339.117567  13405.959811   \n",
+       "\n",
+       "     Amount  \n",
+       "0  5.698458  \n",
+       "1  2.327649  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp_class = df_new['Class']\n",
+    "temp_df = df_new.drop('Class', axis=1)\n",
+    "temp_df = temp_df * 20000\n",
+    "temp_df.head(2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Time</th>\n",
+       "      <th>V1</th>\n",
+       "      <th>V2</th>\n",
+       "      <th>V3</th>\n",
+       "      <th>V4</th>\n",
+       "      <th>V5</th>\n",
+       "      <th>V6</th>\n",
+       "      <th>V7</th>\n",
+       "      <th>V8</th>\n",
+       "      <th>V9</th>\n",
+       "      <th>V10</th>\n",
+       "      <th>V11</th>\n",
+       "      <th>V12</th>\n",
+       "      <th>V13</th>\n",
+       "      <th>V14</th>\n",
+       "      <th>Amount</th>\n",
+       "      <th>Class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>18741.492662</td>\n",
+       "      <td>19828.356443</td>\n",
+       "      <td>15186.362165</td>\n",
+       "      <td>16278.623253</td>\n",
+       "      <td>4452.014003</td>\n",
+       "      <td>15516.664968</td>\n",
+       "      <td>6069.734946</td>\n",
+       "      <td>5126.825088</td>\n",
+       "      <td>15952.256295</td>\n",
+       "      <td>10224.846798</td>\n",
+       "      <td>10109.307540</td>\n",
+       "      <td>5570.452646</td>\n",
+       "      <td>14468.502119</td>\n",
+       "      <td>9061.453421</td>\n",
+       "      <td>12876.306388</td>\n",
+       "      <td>5.698458</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>14407.727210</td>\n",
+       "      <td>19858.394983</td>\n",
+       "      <td>15334.852160</td>\n",
+       "      <td>15688.216530</td>\n",
+       "      <td>5258.427845</td>\n",
+       "      <td>15710.635174</td>\n",
+       "      <td>5923.702380</td>\n",
+       "      <td>5306.843169</td>\n",
+       "      <td>15852.475389</td>\n",
+       "      <td>9287.170578</td>\n",
+       "      <td>10292.314406</td>\n",
+       "      <td>5402.552065</td>\n",
+       "      <td>14329.261237</td>\n",
+       "      <td>8339.117567</td>\n",
+       "      <td>13405.959811</td>\n",
+       "      <td>2.327649</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Time            V1            V2            V3           V4  \\\n",
+       "0  18741.492662  19828.356443  15186.362165  16278.623253  4452.014003   \n",
+       "1  14407.727210  19858.394983  15334.852160  15688.216530  5258.427845   \n",
+       "\n",
+       "             V5           V6           V7            V8            V9  \\\n",
+       "0  15516.664968  6069.734946  5126.825088  15952.256295  10224.846798   \n",
+       "1  15710.635174  5923.702380  5306.843169  15852.475389   9287.170578   \n",
+       "\n",
+       "            V10          V11           V12          V13           V14  \\\n",
+       "0  10109.307540  5570.452646  14468.502119  9061.453421  12876.306388   \n",
+       "1  10292.314406  5402.552065  14329.261237  8339.117567  13405.959811   \n",
+       "\n",
+       "     Amount  Class  \n",
+       "0  5.698458    0.0  \n",
+       "1  2.327649    0.0  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp_class = pd.DataFrame(temp_class, columns=[\"Class\"])\n",
+    "temp_df2 = pd.concat([temp_df, temp_class], axis=1)\n",
+    "temp_df2.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Time      20000.0\n",
+       "V1        20000.0\n",
+       "V2        20000.0\n",
+       "V3        20000.0\n",
+       "V4        20000.0\n",
+       "V5        20000.0\n",
+       "V6        20000.0\n",
+       "V7        20000.0\n",
+       "V8        20000.0\n",
+       "V9        20000.0\n",
+       "V10       20000.0\n",
+       "V11       20000.0\n",
+       "V12       20000.0\n",
+       "V13       20000.0\n",
+       "V14       20000.0\n",
+       "Amount    20000.0\n",
+       "Class         1.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp_df2.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 227845 entries, 0 to 227844\n",
+      "Data columns (total 17 columns):\n",
+      " #   Column  Non-Null Count   Dtype  \n",
+      "---  ------  --------------   -----  \n",
+      " 0   Time    227845 non-null  float64\n",
+      " 1   V1      227845 non-null  float64\n",
+      " 2   V2      227845 non-null  float64\n",
+      " 3   V3      227845 non-null  float64\n",
+      " 4   V4      227845 non-null  float64\n",
+      " 5   V5      227845 non-null  float64\n",
+      " 6   V6      227845 non-null  float64\n",
+      " 7   V7      227845 non-null  float64\n",
+      " 8   V8      227845 non-null  float64\n",
+      " 9   V9      227845 non-null  float64\n",
+      " 10  V10     227845 non-null  float64\n",
+      " 11  V11     227845 non-null  float64\n",
+      " 12  V12     227845 non-null  float64\n",
+      " 13  V13     227845 non-null  float64\n",
+      " 14  V14     227845 non-null  float64\n",
+      " 15  Amount  227845 non-null  float64\n",
+      " 16  Class   227845 non-null  float64\n",
+      "dtypes: float64(17)\n",
+      "memory usage: 29.6 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "temp_df2.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([227845, 17, 8])\n"
+     ]
+    }
+   ],
+   "source": [
+    "embedding = nn.Embedding(num_embeddings=20001, embedding_dim=8)\n",
+    "# df -> torch tensor (LongTensor)\n",
+    "input_tensor = torch.LongTensor(temp_df2.values)\n",
+    "embedded_output = embedding(input_tensor)  # Shape: [36455, 17, 8]\n",
+    "print(embedded_output.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class MultiheadAttention(nn.Module):\n",
+    "    def __init__(self, input_dim, d_model, num_heads):\n",
+    "        super().__init__()\n",
+    "        assert d_model % num_heads == 0, \"d_model must be divisible by num_heads\"\n",
+    "        self.d_model = d_model\n",
+    "        self.num_heads = num_heads\n",
+    "        self.head_dim = d_model // num_heads\n",
+    "\n",
+    "        # now three separate linears instead of one combined qkv_layer\n",
+    "        self.q_linear = nn.Linear(input_dim, d_model)\n",
+    "        self.k_linear = nn.Linear(input_dim, d_model)\n",
+    "        self.v_linear = nn.Linear(input_dim, d_model)\n",
+    "\n",
+    "        self.output_linear = nn.Linear(d_model, d_model)\n",
+    "\n",
+    "    def forward(self, x, mask=None):\n",
+    "        # x: [B, S, input_dim]\n",
+    "        B, S, _ = x.size()\n",
+    "\n",
+    "        # project to queries, keys, values\n",
+    "        Q = self.q_linear(x)  # [B, S, d_model]\n",
+    "        K = self.k_linear(x)\n",
+    "        V = self.v_linear(x)\n",
+    "\n",
+    "        # reshape + split into heads\n",
+    "        # → [B, S, num_heads, head_dim]\n",
+    "        Q = Q.view(B, S, self.num_heads, self.head_dim).transpose(1, 2)  # [B, H, S, Dh]\n",
+    "        K = K.view(B, S, self.num_heads, self.head_dim).transpose(1, 2)\n",
+    "        V = V.view(B, S, self.num_heads, self.head_dim).transpose(1, 2)\n",
+    "\n",
+    "        # scaled dot-product attention per head\n",
+    "        values, attn = scaled_dot_product(Q, K, V, mask)  # both [B, H, S, Dh]\n",
+    "\n",
+    "        # recombine heads\n",
+    "        values = values.transpose(1, 2).contiguous().view(B, S, self.d_model)  # [B, S, d_model]\n",
+    "\n",
+    "        # final output projection\n",
+    "        out = self.output_linear(values)  # [B, S, d_model]\n",
+    "        return out, attn"
+   ]
   }
  ],
  "metadata": {
